--- a/PositionIn/Views/CommunityCells/PositionIn.CommunityHeaderCell.xib
+++ b/PositionIn/Views/CommunityCells/PositionIn.CommunityHeaderCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -11,6 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LnB-1Z-Tnm" id="2NY-pq-cAG">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="119.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eCc-QS-ao5">
@@ -27,41 +29,56 @@
                             <constraint firstAttribute="height" constant="40" id="FxE-KI-9f1"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rt-Jw-7c4">
-                        <rect key="frame" x="18" y="90" width="284" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rt-Jw-7c4">
+                        <rect key="frame" x="18" y="90.5" width="262" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="25" id="OHW-bh-Swl"/>
-                        </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="OHW-bh-Swl"/>
-                            </mask>
-                        </variation>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pbh-Rx-aQ3">
+                        <rect key="frame" x="289" y="87" width="25" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="Njj-Zk-jic"/>
+                            <constraint firstAttribute="width" constant="25" id="rdK-oz-fdz"/>
+                        </constraints>
+                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal" image="productTerms&amp;Info"/>
+                        <connections>
+                            <action selector="infoButtonTapped:" destination="LnB-1Z-Tnm" eventType="touchUpInside" id="Czp-3B-yBu"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="2rt-Jw-7c4" firstAttribute="centerY" secondItem="fVh-Nj-957" secondAttribute="centerY" id="2Na-0e-TOR"/>
                     <constraint firstItem="fVh-Nj-957" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leading" id="6jH-af-dyR"/>
                     <constraint firstAttribute="trailing" secondItem="fVh-Nj-957" secondAttribute="trailing" id="CYo-bX-8A8"/>
+                    <constraint firstItem="pbh-Rx-aQ3" firstAttribute="trailing" secondItem="2NY-pq-cAG" secondAttribute="trailingMargin" constant="2" id="HGV-rg-Lgx"/>
                     <constraint firstAttribute="bottom" secondItem="eCc-QS-ao5" secondAttribute="bottom" id="Rff-27-e1M"/>
                     <constraint firstAttribute="trailing" secondItem="eCc-QS-ao5" secondAttribute="trailing" id="SwY-o8-c1A"/>
                     <constraint firstItem="2rt-Jw-7c4" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leadingMargin" constant="10" id="j29-Of-4Hm"/>
                     <constraint firstItem="2rt-Jw-7c4" firstAttribute="centerX" secondItem="fVh-Nj-957" secondAttribute="centerX" id="kt7-gw-MWl"/>
                     <constraint firstItem="eCc-QS-ao5" firstAttribute="top" secondItem="2NY-pq-cAG" secondAttribute="top" id="oce-W3-y5K"/>
                     <constraint firstAttribute="bottom" secondItem="fVh-Nj-957" secondAttribute="bottom" constant="-1" id="oj2-0A-gCO"/>
+                    <constraint firstItem="pbh-Rx-aQ3" firstAttribute="leading" secondItem="2rt-Jw-7c4" secondAttribute="trailing" constant="9" id="sQ6-Yg-UMW"/>
                     <constraint firstItem="eCc-QS-ao5" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leading" id="sgt-lo-xGj"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="2rt-Jw-7c4" secondAttribute="trailing" constant="10" id="yuX-gS-vv5"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="pbh-Rx-aQ3" secondAttribute="bottom" id="v2o-bz-Ky8"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="kt7-gw-MWl"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="captionLabel" destination="2rt-Jw-7c4" id="DDK-Hj-xGj"/>
                 <outlet property="contentImageView" destination="eCc-QS-ao5" id="fFd-3b-wbE"/>
+                <outlet property="infoButton" destination="pbh-Rx-aQ3" id="VYX-YO-bFK"/>
             </connections>
             <point key="canvasLocation" x="315" y="332"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="productTerms&amp;Info" width="25" height="25"/>
+    </resources>
 </document>
