--- a/PositionIn/Views/CommunityCells/PositionIn.CommunityHeaderCell.xib
+++ b/PositionIn/Views/CommunityCells/PositionIn.CommunityHeaderCell.xib
@@ -30,7 +30,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rt-Jw-7c4">
-                        <rect key="frame" x="18" y="90.5" width="262" height="20.5"/>
+                        <rect key="frame" x="54" y="90" width="226" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -38,41 +38,45 @@
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pbh-Rx-aQ3">
                         <rect key="frame" x="289" y="87" width="25" height="25"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="Njj-Zk-jic"/>
                             <constraint firstAttribute="width" constant="25" id="rdK-oz-fdz"/>
                         </constraints>
-                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <state key="normal" image="productTerms&amp;Info"/>
                         <connections>
                             <action selector="infoButtonTapped:" destination="LnB-1Z-Tnm" eventType="touchUpInside" id="Czp-3B-yBu"/>
                         </connections>
                     </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z9s-V9-6Tm">
+                        <rect key="frame" x="8" y="81" width="36" height="36"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="36" id="7Sf-yf-fbn"/>
+                            <constraint firstAttribute="width" constant="36" id="JaK-Nk-3sr"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="2rt-Jw-7c4" firstAttribute="centerY" secondItem="fVh-Nj-957" secondAttribute="centerY" id="2Na-0e-TOR"/>
                     <constraint firstItem="fVh-Nj-957" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leading" id="6jH-af-dyR"/>
+                    <constraint firstItem="z9s-V9-6Tm" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leadingMargin" id="8Jj-hM-LSd"/>
                     <constraint firstAttribute="trailing" secondItem="fVh-Nj-957" secondAttribute="trailing" id="CYo-bX-8A8"/>
                     <constraint firstItem="pbh-Rx-aQ3" firstAttribute="trailing" secondItem="2NY-pq-cAG" secondAttribute="trailingMargin" constant="2" id="HGV-rg-Lgx"/>
                     <constraint firstAttribute="bottom" secondItem="eCc-QS-ao5" secondAttribute="bottom" id="Rff-27-e1M"/>
                     <constraint firstAttribute="trailing" secondItem="eCc-QS-ao5" secondAttribute="trailing" id="SwY-o8-c1A"/>
-                    <constraint firstItem="2rt-Jw-7c4" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leadingMargin" constant="10" id="j29-Of-4Hm"/>
-                    <constraint firstItem="2rt-Jw-7c4" firstAttribute="centerX" secondItem="fVh-Nj-957" secondAttribute="centerX" id="kt7-gw-MWl"/>
+                    <constraint firstItem="z9s-V9-6Tm" firstAttribute="bottom" secondItem="2NY-pq-cAG" secondAttribute="bottomMargin" constant="5.5" id="YB0-3M-wd7"/>
                     <constraint firstItem="eCc-QS-ao5" firstAttribute="top" secondItem="2NY-pq-cAG" secondAttribute="top" id="oce-W3-y5K"/>
                     <constraint firstAttribute="bottom" secondItem="fVh-Nj-957" secondAttribute="bottom" constant="-1" id="oj2-0A-gCO"/>
                     <constraint firstItem="pbh-Rx-aQ3" firstAttribute="leading" secondItem="2rt-Jw-7c4" secondAttribute="trailing" constant="9" id="sQ6-Yg-UMW"/>
                     <constraint firstItem="eCc-QS-ao5" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leading" id="sgt-lo-xGj"/>
                     <constraint firstAttribute="bottomMargin" secondItem="pbh-Rx-aQ3" secondAttribute="bottom" id="v2o-bz-Ky8"/>
+                    <constraint firstItem="2rt-Jw-7c4" firstAttribute="leading" secondItem="z9s-V9-6Tm" secondAttribute="trailing" constant="10" id="xQk-TQ-WZa"/>
                 </constraints>
-                <variation key="default">
-                    <mask key="constraints">
-                        <exclude reference="kt7-gw-MWl"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="captionLabel" destination="2rt-Jw-7c4" id="DDK-Hj-xGj"/>
+                <outlet property="communityType" destination="z9s-V9-6Tm" id="Z3e-Kd-0Qt"/>
                 <outlet property="contentImageView" destination="eCc-QS-ao5" id="fFd-3b-wbE"/>
                 <outlet property="infoButton" destination="pbh-Rx-aQ3" id="VYX-YO-bFK"/>
             </connections>
