--- a/PositionIn/Browse/BrowseList/PositionIn.BrowseListViewController.xib
+++ b/PositionIn/Browse/BrowseList/PositionIn.BrowseListViewController.xib
@@ -56,6 +56,7 @@
                     </constraints>
                 </view>
             </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="a6X-i6-NUa" secondAttribute="trailing" constant="10" id="7wr-hj-jfT"/>
                 <constraint firstAttribute="bottom" secondItem="rSU-D8-03P" secondAttribute="bottom" id="BnK-3b-bE1"/>
